--- a/images/curl_quiceh/Dockerfile
+++ b/images/curl_quiceh/Dockerfile
@@ -1,6 +1,19 @@
 FROM rust:latest
 
-RUN apt-get update && apt-get install -y build-essential cmake libpsl-dev linux-perf
+RUN apt-get update && apt-get upgrade -y && apt-get install -y lsb-release
+
+RUN curl -k https://nginx.org/keys/nginx_signing.key | gpg --dearmor \
+    | tee /usr/share/keyrings/nginx-archive-keyring.gpg >/dev/null
+
+RUN gpg --dry-run --quiet --no-keyring --import --import-options import-show /usr/share/keyrings/nginx-archive-keyring.gpg
+
+RUN echo "deb [signed-by=/usr/share/keyrings/nginx-archive-keyring.gpg] http://nginx.org/packages/debian `lsb_release -cs` nginx" \
+    | tee /etc/apt/sources.list.d/nginx.list
+
+RUN printf "Package: *\nPin: origin nginx.org\nPin: release o=nginx\nPin-Priority: 900\n" \
+    | tee /etc/apt/preferences.d/99nginx
+
+RUN apt-get update && apt-get install -y build-essential cmake libpsl-dev linux-perf nginx
 RUN apt-get remove --purge -y curl
 
 
@@ -41,8 +54,12 @@ RUN mkdir -p /public \
     && truncate --size 1G /public/1G.bin \
     && shred --iterations 1 /public/1G.bin
 
+COPY nginx.conf /etc/nginx/nginx.conf
+
 COPY ./hotspot_perf /usr/local/bin/hotspot_perf
 COPY ./quiceh-client-default /usr/local/bin/quiceh-client-default
 COPY ./quiceh-client-default-perf /usr/local/bin/quiceh-client-default-perf
 COPY ./curl-http3-default /usr/local/bin/curl-http3-default
 COPY ./curl-http3-default-perf /usr/local/bin/curl-http3-default-perf
+COPY ./curl-http2-default /usr/local/bin/curl-http2-default
+COPY ./curl-http2-default-perf /usr/local/bin/curl-http2-default-perf
