--- a/images/nginx/nginx.conf
+++ b/images/nginx/nginx.conf
@@ -37,7 +37,7 @@ http {
     server {
         listen 443 ssl;
         listen [::]:443 ssl;
-        server_name nginx.quiceh.org;
+        server_name nginx.benchmark.unamur;
 
         http2 on;
 
